--- a/ui/package.json
+++ b/ui/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "hammerjs": "^2.0.8",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-scripts": "5.0.0",
